--- a/define_storage.yml
+++ b/define_storage.yml
@@ -33,12 +33,12 @@
             disks: "{{ database_vg_disks }}"
             volumes:
               - name: database_lv
-                size: "{{ database_lv_size }}"
+                size: "{{ database_vg_database_lv_size }}"
                 mount_point: "/database"
                 fs_type: ext4
                 state: present
               - name: backup_lv
-                size: "{{ backup_lv_size }}"
+                size: "{{ database_vg_backup_lv_size }}"
                 mount_point: "/backup"
                 state: present
       include_role:
